--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "builds": [
-    { "src": "main.py", "use": "@vercel/python" }
-  ],
   "routes": [
-    { "src": "/(.*)", "dest": "main.py" }
+    { "src": "/api/icon/(.*)", "dest": "/main.py" },
+    { "src": "/", "dest": "/main.py" }
   ]
 }
