--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "routes": [
     { "src": "/api/icon/(.*)", "dest": "/main.py" },
-    { "src": "/", "status": 200, "headers": { "Content-Type": "text/html" }, "dest": "/main.py" }
+    { "src": "/Icon_Emote_LOL.png", "dest": "/main.py" }
   ]
 }
